--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,11 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   background: var(--background);
@@ -11,15 +16,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 /* Custom pagination bullets */
 .swiper-pagination-bullet {
   width: var(--swiper-pagination-bullet-size, 8px);
   height: var(--swiper-pagination-bullet-size, 8px);
-  background: var(--swiper-pagination-bullet-inactive-color, #4B5563);
+  background: var(--swiper-pagination-bullet-inactive-color, #4b5563);
   opacity: var(--swiper-pagination-bullet-inactive-opacity, 1);
 }
 
 .swiper-pagination-bullet-active {
-  background: var(--swiper-pagination-color, #4B5563);
+  background: var(--swiper-pagination-color, #4b5563);
 }
